Prevent selectmenu's from wrapping

--- a/include/themes/classic/main.css
+++ b/include/themes/classic/main.css
@@ -2011,3 +2011,7 @@ tr#realtime td:first-child {
 td.center > table {
 	margin: 0 auto;
 }
+
+.ui-menu-item-wrapper {
+	white-space: nowrap;
+}
