--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -2572,3 +2572,7 @@ input:checked + .radioSlider:before {
 td.center > table {
 	margin: 0 auto;
 }
+
+.ui-menu-item-wrapper {
+	white-space: nowrap;
+}
