--- a/include/themes/paw/main.css
+++ b/include/themes/paw/main.css
@@ -2260,3 +2260,7 @@ input:checked + .radioSlider:before {
 td.center > table {
 	margin: 0 auto;
 }
+
+.ui-menu-item-wrapper {
+	white-space: nowrap;
+}
