--- a/include/themes/sunrise/main.css
+++ b/include/themes/sunrise/main.css
@@ -2616,3 +2616,7 @@ input:checked + .radioSlider:before {
 td.center > table {
 	margin: 0 auto;
 }
+
+.ui-menu-item-wrapper {
+	white-space: nowrap;
+}
